--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-streamlit
-pandas
-matplotlib
-seaborn
-plotly
-numpy
-scipy
-openpyxl
-scikit-learn
-networkx 
+streamlit==1.29.0
+pandas==2.1.4
+numpy==1.26.2
